tests/baselines/reference/ModuleWithExportedAndNonExportedEnums.errors.txt
ModuleWithExportedAndNonExportedEnums.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
ModuleWithExportedAndNonExportedEnums.ts(10,11): error TS2339: Property 'Day' does not exist on type 'typeof A'.


==== ModuleWithExportedAndNonExportedEnums.ts (2 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export enum Color { Red, Blue }
        enum Day { Monday, Tuesday }
    }
    
    // not an error since exported
    var a: A.Color = A.Color.Red;
    
    // error not exported
    var b = A.Day.Monday;
              ~~~
!!! error TS2339: Property 'Day' does not exist on type 'typeof A'.
    